# paper-to-post

./: .env.example  .gitignore  CONFIG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: brand.bio.yml  brand.cs.yml  topics.yml
research-post-builder/: SKILL.md  evals.json
research-post-builder/references/: headline-style-guide.md  hero-image-guide.md  instagram-publishing.md  instagram-writing-guide.md  linkedin-writing-guide.md  newsletter-writing-guide.md  post-schema.md  scoring-rubric.md
scripts/: assemble_bundle.py  build_roundup.py  check_published.mjs  collect_insights.mjs  collect_insights.py  fetch_arxiv.py  fetch_biorxiv.py  fetch_crossref.py  fetch_journals.py  fetch_labs.py  fetch_openalex.py  fetch_pubmed.py  fetch_semantic_scholar.py  filter_prescore.py  gather.py  newsletter.py  normalize_dedupe.py  notify_telegram.py  paper_text.py  publish_instagram.mjs  publish_linkedin.mjs  render_cards.py  render_grid_preview.py  render_hero.py  screenshot_page1.py  validate_post.py  verify_bundle.py
scripts/jslib/: insights_logic.mjs  publish_logic.mjs
scripts/lib/: bundle.py  config.py  fetch_http.py  filtering.py  hero.py  imageutil.py  journals.py  models.py  oa.py  paperkey.py  paths.py  pdf.py  sourceline.py  store.py  textutil.py  validation.py
templates/: carousel.css  carousel.html.j2  motifs.py  render.py  title.html.j2
templates/fonts/: OFL.txt
tests/: conftest.py  test_assemble_bundle_cli.py  test_bundle.py  test_collect_insights.py  test_config.py  test_fetch_arxiv.py  test_fetch_biorxiv.py  test_fetch_crossref.py  test_fetch_http.py  test_fetch_journals.py  test_fetch_labs.py  test_fetch_openalex.py  test_fetch_pubmed.py  test_fetch_semantic_scholar.py  test_filter_prescore_cli.py  test_filter_prescore_trends.py  test_filtering.py  test_gather.py  test_grid_preview.py  test_hero.py  test_hero_cli.py  test_imageutil.py  test_ingestion_e2e.py  test_models.py  test_newsletter.py  test_normalize_dedupe.py  test_oa.py  test_paper_text.py  test_paperkey.py  test_render_cards.py  test_roundup.py  test_screenshot_gating.py  test_sourceline.py  test_store.py  test_textutil.py  test_trends_cache.py  test_trends_config.py  test_trends_corpus_burst.py  test_trends_external.py  test_trends_history.py  (+5 more)
tests/fixtures/: arxiv_response.xml  biorxiv_response.json  crossref_response.json  good_paper.json  good_post.json  journals_response.json  labs_response.json  openalex_response.json  (+2 more)
(+22 files in other folders)
